# onix

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
onix/: Buffer.hpp  CMakeLists.txt  Color.hpp  Hittable.hpp  HittableList.hpp  Material.hpp  Ray.hpp  Sphere.hpp  main.cpp
